p7/tests/t067.gpl
string str1 = "hello";
string str2 = "o";

on akey
{
    str1 -= str2;
}
